--- a/index.html
+++ b/index.html
@@ -5,18 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Demmy's UX/UI Portfolio</title>
-    <link rel="stylesheet" href="./style.css">
+    <link rel = "stylesheet" href = "./style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;300;400;600&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Inter&display=swap" rel="stylesheet">
 </head>
+
 <body>
- 
-    <section>
-        <div class="preloader">
-            <img src="./images/preloader.svg" alt="preloading logo">
-        </div>
-    </section>
+    <div class="preloader">
+        <img src="./images/preloader.svg" alt="preloading logo">
+    </div>
     <script src="./main.js"></script>
 </body>
 </html>
