--- a/index.html
+++ b/index.html
@@ -8,13 +8,29 @@
     <link rel = "stylesheet" href = "./style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300&display=swap" rel="stylesheet">
 </head>
-
 <body>
+    <nav>
+        <div class="logo">
+            <b>Demmy Yang</b>&emsp;|&emsp;Brooklyn, NY
+        </div>
+        <ul class="nav-links">
+            <li><a href="./html/about.html">About</a></li>
+            <li><a href="./index.html">Gallery</a></li>
+            <li><a href="index.html">Contact</a></li>
+        </ul>
+        <div class="burger">
+            <div class="line1"></div>
+            <div class="line2"></div>
+            <div class="line3"></div>
+        </div>
+    </nav>
+    
     <div class="preloader">
         <img src="./images/preloader.svg" alt="preloading logo">
     </div>
+
     <script src="./main.js"></script>
 </body>
 </html>
