--- a/index.html
+++ b/index.html
@@ -8,17 +8,19 @@
     <link rel = "stylesheet" href = "./style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@300&display=swap" rel="stylesheet">
 </head>
 <body>
     <nav>
         <div class="logo">
-            <b>Demmy Yang</b>&emsp;|&emsp;Brooklyn, NY
+            <b>Demmy Yang</b>&ensp;|&ensp;based in Brooklyn, NY
         </div>
-        <ul class="nav-links">
-            <li><a href="./html/about.html">About</a></li>
-            <li><a href="./index.html">Gallery</a></li>
-            <li><a href="index.html">Contact</a></li>
+        <ul class="nav-container">
+            <li><a href="./html/about.html" class="nav-links">About</a></li>
+            <li><a href="./html/UXUI.html" class="nav-links">UX/UI</a></li>
+            <li><a href="https://www.etsy.com/shop/DemmyPaperieCo" class="nav-links">Etsy</a></li>
+            <li><a href="./html/contact.html" class="nav-links">Contact</a></li>
+
         </ul>
         <div class="burger">
             <div class="line1"></div>
