--- a/index.html
+++ b/index.html
@@ -20,14 +20,39 @@
             <li><a href="./html/UXUI.html" class="nav-links">UX/UI</a></li>
             <li><a href="https://www.etsy.com/shop/DemmyPaperieCo" class="nav-links">Etsy</a></li>
             <li><a href="./html/contact.html" class="nav-links">Contact</a></li>
-
         </ul>
+
         <div class="burger">
             <div class="line1"></div>
             <div class="line2"></div>
             <div class="line3"></div>
         </div>
     </nav>
+    <main>
+        <div class="grid">
+            <div class="retriever_gallery">
+                Retriever
+            </div>
+            <div class="sports_gallery">
+                Sports Networking
+            </div>
+            <div class="hotel_fullerton_gallery">
+                Hotel Fullerton
+            </div>
+            <div class="USDA_gallery">
+                USDA
+            </div>
+            <div class="mom_gallery">
+                Move Over Mozart
+            </div>
+            <div class="hearts_bones_gallery">
+                Hearts & Bones
+            </div>
+            <div class="footer">Footer</div>
+        </div>
+    </main>
+
+    
     
     <div class="preloader">
         <img src="./images/preloader.svg" alt="preloading logo">
