--- a/index.html
+++ b/index.html
@@ -31,22 +31,24 @@
     <main>
         <div class="grid">
             <div class="retriever_gallery">
-                Retriever
+                <img src="./images/retriever_gallery.svg" alt="retriever_gallery">
+                <img src="./images/retriever_gallery.png" class="gallery_img">
             </div>
             <div class="sports_gallery">
-                Sports Networking
+                <img src="./images/sporty_gallery.svg" alt="sports_gallery">
+                <img src="./images/sport_gallery.png" class="gallery_img">
             </div>
             <div class="hotel_fullerton_gallery">
-                Hotel Fullerton
+                <img src="./images/hotel_fullerton_gallery.svg" alt="hotel_fullerton_gallery">
             </div>
             <div class="USDA_gallery">
-                USDA
+                <img src="./images/usda_gallery.svg" alt="usda_gallery">
             </div>
             <div class="mom_gallery">
-                Move Over Mozart
+                <img src="./images/mom_gallery.svg" alt="mom_gallery">
             </div>
             <div class="hearts_bones_gallery">
-                Hearts & Bones
+                <img src="./images/hearts_bones_gallery.svg">
             </div>
             <div class="footer">Footer</div>
         </div>
