gallery hover animations

--- a/index.html
+++ b/index.html
@@ -31,12 +31,16 @@
     <main>
         <div class="grid">
             <div class="retriever_gallery">
-                <img src="./images/retriever_gallery.svg" alt="retriever_gallery">
-                <img src="./images/retriever_gallery.png" class="gallery_img">
+                <a href="https://www.google.com">
+                    <img src="./images/retriever_gallery.svg" alt="retriever_gallery">
+                    <img src="./images/retriever_gallery.png" class="gallery_img">
+                </a>
             </div>
             <div class="sports_gallery">
-                <img src="./images/sporty_gallery.svg" alt="sports_gallery">
-                <img src="./images/sport_gallery.png" class="gallery_img">
+                <a href="https://www.google.com">
+                    <img src="./images/sporty_gallery.svg" alt="sports_gallery">
+                    <img src="./images/sport_gallery.png" class="gallery_img">
+                </a>
             </div>
             <div class="hotel_fullerton_gallery">
                 <img src="./images/hotel_fullerton_gallery.svg" alt="hotel_fullerton_gallery">
