--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel = "stylesheet" href = "./style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@300&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Work+Sans&display=swap" rel="stylesheet">
 </head>
 <body>
     <nav>
@@ -54,7 +54,8 @@
             <div class="hearts_bones_gallery">
                 <img src="./images/hearts_bones_gallery.svg">
             </div>
-            <div class="footer">Footer</div>
+            <div class="footer">
+                &copy; 2021&emsp;&emsp;built by Demmy Yang
         </div>
     </main>
 
