--- a/html/about.html
+++ b/html/about.html
@@ -8,7 +8,8 @@
     <link rel = "stylesheet" href = "../css/about.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@300&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Work+Sans&display=swap" rel="stylesheet">
+
 </head>
 <body>
     <nav>
@@ -28,7 +29,6 @@
             <div class="line3"></div>
         </div>
     </nav>
-
-    <script src="./main.js"></script>
+    <script src="../main.js"></script>
 </body>
 </html>
