retriever gallery item 90% complete

--- a/index.html
+++ b/index.html
@@ -33,7 +33,17 @@
             <div class="retriever_gallery">
                 <a href="https://www.google.com">
                     <img src="./images/retriever_gallery.svg" alt="retriever_gallery">
-                    <img src="./images/retriever_gallery.png" class="gallery_img">
+                    <img src="./mockups/final gallery mocks/retriever.png" class="gallery_img">
+                    <div class="retriever_overlay">
+                        <div class="retriever_title">RETRIEVER</div>
+                        <p class="retriever_description">
+                            Columbia University<br />
+                            UI/UX Bootcamp<br />
+                            March 2021<br /><br />
+                            A study of the problem space between pet owners and their community when a pet is lost.
+                        </p>
+                        <div class="view_project">view project &rarr;</div>
+                    </div>
                 </a>
             </div>
             <div class="sports_gallery">
