usda gallery added

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                             Columbia University<br />
                             UI/UX Bootcamp<br />
                             March 2021<br /><br />
-                            A study of the problem space between pet owners and their community when a pet is lost.
+                            A study of the problem space surrounding pet owners and their community when a pet is lost.
                         </p>
                         <div class="view_project">view project &rarr;</div>
                     </div>
@@ -57,6 +57,17 @@
             </div>
             <div class="USDA_gallery">
                 <img src="./images/usda_gallery.svg" alt="usda_gallery">
+                <img src="./mockups/final gallery mocks/usda_gallery.png" class="gallery_img">
+                    <div class="usda_overlay">
+                        <div class="usda_title">U.S. Dept. of Agriculture</div>
+                        <p class="usda_description">
+                            Columbia University<br />
+                            UI/UX Bootcamp<br />
+                            May 2021<br /><br />
+                            A complete redesign of a prominent government agnecy with a focus on information architecture.
+                        </p>
+                        <div class="usda_view_project">view project &rarr;</div>
+                    </div>
             </div>
             <div class="mom_gallery">
                 <img src="./images/mom_gallery.svg" alt="mom_gallery">
