--- a/index.html
+++ b/index.html
@@ -49,15 +49,15 @@
             <div class="sports_gallery">
                 <a href="https://www.google.com">
                     <img src="./images/sporty_gallery.svg" alt="sports_gallery">
-                    <img src="./images/sport_gallery.png" class="gallery_img">
                 </a>
             </div>
             <div class="hotel_fullerton_gallery">
                 <img src="./images/hotel_fullerton_gallery.svg" alt="hotel_fullerton_gallery">
             </div>
             <div class="USDA_gallery">
-                <img src="./images/usda_gallery.svg" alt="usda_gallery">
-                <img src="./mockups/final gallery mocks/usda_gallery.png" class="gallery_img">
+                <a href="https://www.google.com">
+                    <img src="./images/usda_gallery.svg" alt="usda_gallery">
+                    <img src="./mockups/final gallery mocks/usda_gallery.png" class="gallery_img">
                     <div class="usda_overlay">
                         <div class="usda_title">U.S. Dept. of Agriculture</div>
                         <p class="usda_description">
@@ -68,6 +68,7 @@
                         </p>
                         <div class="usda_view_project">view project &rarr;</div>
                     </div>
+                </a>
             </div>
             <div class="mom_gallery">
                 <img src="./images/mom_gallery.svg" alt="mom_gallery">
@@ -77,6 +78,7 @@
             </div>
             <div class="footer">
                 &copy; 2021&emsp;&emsp;built by Demmy Yang
+            </div>
         </div>
     </main>
 
