--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
 <body>
     <nav>
         <div class="logo">
-            <b>Demmy Yang</b>&ensp;|&ensp;based in Brooklyn, NY
+            Demmy Yang&ensp;|&ensp;UX/UI Designer
         </div>
         <ul class="nav-container">
+            <li><a href="./html/UXUI.html" class="nav-links">Projects</a></li>
             <li><a href="./html/about.html" class="nav-links">About</a></li>
-            <li><a href="./html/UXUI.html" class="nav-links">UX/UI</a></li>
-            <li><a href="https://www.etsy.com/shop/DemmyPaperieCo" class="nav-links">Etsy</a></li>
+            <li><a href="./html/resume.html" class="nav-links">Resume</a></li>
             <li><a href="./html/contact.html" class="nav-links">Contact</a></li>
         </ul>
 
@@ -38,11 +38,11 @@
                         <div class="retriever_title">RETRIEVER</div>
                         <p class="retriever_description">
                             Columbia University<br />
-                            UI/UX Bootcamp<br />
-                            March 2021<br /><br />
+                            New York<br />
+                            March &#8212; april 2021<br /><br />
                             A study of the problem space surrounding pet owners and their community when a pet is lost.
                         </p>
-                        <div class="view_project">view project &rarr;</div>
+                        <div class="view_project">view project&#10230;</div>
                     </div>
                 </a>
             </div>
@@ -62,11 +62,11 @@
                         <div class="usda_title">U.S. Dept. of Agriculture</div>
                         <p class="usda_description">
                             Columbia University<br />
-                            UI/UX Bootcamp<br />
-                            May 2021<br /><br />
-                            A complete redesign of a prominent government agnecy with a focus on information architecture.
+                            New York<br />
+                            April &#8212; May 2021<br /><br />
+                            A complete redesign of a prominent government agency with a focus on information architecture.
                         </p>
-                        <div class="usda_view_project">view project &rarr;</div>
+                        <div class="usda_view_project">view project &#10230;</div>
                     </div>
                 </a>
             </div>
