--- a/html/about.html
+++ b/html/about.html
@@ -14,12 +14,12 @@
 <body>
     <nav>
         <div class="logo">
-            <b>Demmy Yang</b>&ensp;|&ensp;based in Brooklyn, NY
+            <b>Demmy Yang</b>&ensp;|&ensp;UX/UI Designer
         </div>
         <ul class="nav-container">
+            <li><a href="../html/UXUI.html" class="nav-links">Projects</a></li>
             <li><a href="../html/about.html" class="nav-links">About</a></li>
-            <li><a href="../html/UXUI.html" class="nav-links">UX/UI</a></li>
-            <li><a href="https://www.etsy.com/shop/DemmyPaperieCo" class="nav-links">Etsy</a></li>
+            <li><a href="../html/resume.html" class="nav-links">Resume</a></li>
             <li><a href="../html/contact.html" class="nav-links">Contact</a></li>
 
         </ul>
