--- a/html/contact.html
+++ b/html/contact.html
@@ -9,16 +9,17 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Work+Sans&display=swap" rel="stylesheet">
+
 </head>
 <body>
     <nav>
         <div class="logo">
-            <b>Demmy Yang</b>&ensp;|&ensp;based in Brooklyn, NY
+            <b>Demmy Yang</b>&ensp;|&ensp;UX/UI Designer
         </div>
         <ul class="nav-container">
+            <li><a href="../html/UXUI.html" class="nav-links">Projects</a></li>
             <li><a href="../html/about.html" class="nav-links">About</a></li>
-            <li><a href="../html/UXUI.html" class="nav-links">UX/UI</a></li>
-            <li><a href="https://www.etsy.com/shop/DemmyPaperieCo" class="nav-links">Etsy</a></li>
+            <li><a href="../html/resume.html" class="nav-links">Resume</a></li>
             <li><a href="../html/contact.html" class="nav-links">Contact</a></li>
 
         </ul>
@@ -28,7 +29,6 @@
             <div class="line3"></div>
         </div>
     </nav>
-
     <script src="../main.js"></script>
 </body>
 </html>
