latest from local

--- a/html/about.html
+++ b/html/about.html
@@ -14,7 +14,7 @@
 <body>
     <nav>
         <div class="logo">
-            <b>Demmy Yang</b>&ensp;|&ensp;UX/UI Designer
+            <a href="../index.html">Demmy Yang&ensp;|&ensp;UX/UI Designer</a>
         </div>
         <ul class="nav-container">
             <li><a href="../html/UXUI.html" class="nav-links">Projects</a></li>
