--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Demmy's UX/UI Portfolio</title>
+    <title>Demmy's UX/UI Portfolio - Projects Gallery</title>
     <link rel = "stylesheet" href = "./style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -13,7 +13,7 @@
 <body>
     <nav>
         <div class="logo">
-            Demmy Yang&ensp;|&ensp;UX/UI Designer
+            <a href="./index.html">Demmy Yang&ensp;|&ensp;UX/UI Designer</a>
         </div>
         <ul class="nav-container">
             <li><a href="./html/UXUI.html" class="nav-links">Projects</a></li>
@@ -30,8 +30,43 @@
     </nav>
     <main>
         <div class="grid">
+
+            <div class="sports_gallery">
+                <a href="./html/sportally.html">
+                    <img src="./images/sporty_gallery.svg" alt="sports_gallery">
+                    <img src="./mockups/final gallery mocks/sportally.png" class="gallery_img">
+                    <div class="sports_overlay">
+                        <div class="sports_title">SPORTALLY</div>
+                        <p class="sports_description">
+                            Columbia University<br />
+                            New York<br />
+                            July &#8212; August 2021<br /><br />
+                            An online platform that connects athletes who want to play sports at any level.  
+                        </p>
+                        <div class="view_project">view case study&#10230;</div>
+                    </div>
+                </a>
+            </div>
+
+            <div class="hotel_fullerton_gallery">
+                <a href="./html/hotelfullerton.html">
+                    <img src="./images/hotel_fullerton_gallery.svg" alt="hotel_fullerton_gallery">
+                    <img src="./mockups/final gallery mocks/hotelfullerton.png" class="gallery_img">
+                    <div class="hotelfullerton_overlay">
+                        <div class="hotelfullerton_title">The Hotel Fullerton</div>
+                        <p class="hotelfullerton_description">
+                            Orange County,<br />
+                            California<br />
+                            July &#8212; August 2021<br /><br />
+                            A fresh update for a popular Anaheim hotel next door to Disneyland. Responsive web design created in Webflow. 
+                        </p>
+                        <div class="view_project">view case study&#10230;</div>
+                    </div>
+                </a>
+            </div>
+
             <div class="retriever_gallery">
-                <a href="https://www.google.com">
+                <a href="./html/retriever.html">
                     <img src="./images/retriever_gallery.svg" alt="retriever_gallery">
                     <img src="./mockups/final gallery mocks/retriever.png" class="gallery_img">
                     <div class="retriever_overlay">
@@ -42,22 +77,50 @@
                             March &#8212; april 2021<br /><br />
                             A study of the problem space surrounding pet owners and their community when a pet is lost.
                         </p>
-                        <div class="view_project">view project&#10230;</div>
+                        <div class="view_project">view case study&#10230;</div>
                     </div>
                 </a>
             </div>
-            <div class="sports_gallery">
-                <a href="https://www.google.com">
-                    <img src="./images/sporty_gallery.svg" alt="sports_gallery">
+
+            <div class="overit_gallery">
+                <a href="./html/overit.html">
+                    <img src="./images/overit.svg" alt="overit_gallery">
+                    <img src="./mockups/final gallery mocks/overit.png" class="gallery_img">
+                    <div class="overit_overlay">
+                        <div class="overit_title">Over-it</div>
+                        <p class="overit_description">
+                            Columbia University<br />
+                            New York<br />
+                            March &#8212; April 2021<br /><br />
+                            An in-depth exploration of air travel processes. Over-it proposes a solution to the drudgery of layover flights. 
+                        </p>
+                        <div class="view_project">view case study &#10230;</div>
+                    </div>
                 </a>
             </div>
-            <div class="hotel_fullerton_gallery">
-                <img src="./images/hotel_fullerton_gallery.svg" alt="hotel_fullerton_gallery">
+
+            <div class="hearts_bones_gallery">
+                <a href="./html/heartsbones.html">
+                    <img src="./images/hearts_bones_gallery.svg" alt="hearts_bones_gallery">
+                    <img src="./mockups/final gallery mocks/heartsbones.png" class="gallery_img">
+                    <div class="hearts_bones_overlay">
+                        <div class="hearts_bones_title">Hearts & Bones Rescue</div>
+                        <p class="hearts_bones_description">
+                            Columbia University<br />
+                            New York<br />
+                            May &#8212; June 2021<br /><br />
+                            A redesign of a local non-profit dog rescue that emphasizes building trust with their donors and volunteers.
+
+                        </p>
+                        <div class="view_project">view case study&#10230;</div>
+                    </div>
+                </a>
             </div>
+
             <div class="USDA_gallery">
-                <a href="https://www.google.com">
+                <a href="./html/usda.html">
                     <img src="./images/usda_gallery.svg" alt="usda_gallery">
-                    <img src="./mockups/final gallery mocks/usda_gallery.png" class="gallery_img">
+                    <img src="./mockups/final gallery mocks/usda.png" class="gallery_img">
                     <div class="usda_overlay">
                         <div class="usda_title">U.S. Dept. of Agriculture</div>
                         <p class="usda_description">
@@ -66,16 +129,12 @@
                             April &#8212; May 2021<br /><br />
                             A complete redesign of a prominent government agency with a focus on information architecture.
                         </p>
-                        <div class="usda_view_project">view project &#10230;</div>
+                        <div class="view_project">view case study&#10230;</div>
                     </div>
                 </a>
             </div>
-            <div class="mom_gallery">
-                <img src="./images/mom_gallery.svg" alt="mom_gallery">
-            </div>
-            <div class="hearts_bones_gallery">
-                <img src="./images/hearts_bones_gallery.svg">
-            </div>
+
+
             <div class="footer">
                 &copy; 2021&emsp;&emsp;built by Demmy Yang
             </div>
