--- a/html/UXUI.html
+++ b/html/UXUI.html
@@ -14,7 +14,7 @@
 <body>
     <nav>
         <div class="logo">
-            <b>Demmy Yang</b>&ensp;|&ensp;UX/UI Designer
+            <a href="../index.html">Demmy Yang&ensp;|&ensp;UX/UI Designer</a>
         </div>
         <ul class="nav-container">
             <li><a href="../html/UXUI.html" class="nav-links">Projects</a></li>
@@ -29,6 +29,119 @@
             <div class="line3"></div>
         </div>
     </nav>
+    <main>
+        <div class="grid">
+
+            <div class="sports_gallery">
+                <a href="../html/sportally.html">
+                    <img src="../images/sporty_gallery.svg" alt="sports_gallery">
+                    <img src="../mockups/final gallery mocks/sportally.png" class="gallery_img">
+                    <div class="sports_overlay">
+                        <div class="sports_title">SPORTALLY</div>
+                        <p class="sports_description">
+                            Columbia University<br />
+                            New York<br />
+                            July &#8212; August 2021<br /><br />
+                            An online platform that connects athletes who want to play sports at any level.  
+                        </p>
+                        <div class="view_project">view case study&#10230;</div>
+                    </div>
+                </a>
+            </div>
+
+            <div class="hotel_fullerton_gallery">
+                <a href="../html/hotelfullerton.html">
+                    <img src="../images/hotel_fullerton_gallery.svg" alt="hotel_fullerton_gallery">
+                    <img src="../mockups/final gallery mocks/hotelfullerton.png" class="gallery_img">
+                    <div class="hotelfullerton_overlay">
+                        <div class="hotelfullerton_title">The Hotel Fullerton</div>
+                        <p class="hotelfullerton_description">
+                            Orange County,<br />
+                            California<br />
+                            July &#8212; August 2021<br /><br />
+                            A fresh update for a popular Anaheim hotel next door to Disneyland. Responsive web design created in Webflow. 
+                        </p>
+                        <div class="view_project">view case study&#10230;</div>
+                    </div>
+                </a>
+            </div>
+
+            <div class="retriever_gallery">
+                <a href="../html/retriever.html">
+                    <img src="../images/retriever_gallery.svg" alt="retriever_gallery">
+                    <img src="../mockups/final gallery mocks/retriever.png" class="gallery_img">
+                    <div class="retriever_overlay">
+                        <div class="retriever_title">RETRIEVER</div>
+                        <p class="retriever_description">
+                            Columbia University<br />
+                            New York<br />
+                            March &#8212; april 2021<br /><br />
+                            A study of the problem space surrounding pet owners and their community when a pet is lost.
+                        </p>
+                        <div class="view_project">view case study&#10230;</div>
+                    </div>
+                </a>
+            </div>
+
+            <div class="overit_gallery">
+                <a href="../html/overit.html">
+                    <img src="../images/overit.svg" alt="overit_gallery">
+                    <img src="../mockups/final gallery mocks/overit.png" class="gallery_img">
+                    <div class="overit_overlay">
+                        <div class="overit_title">Over-it</div>
+                        <p class="overit_description">
+                            Columbia University<br />
+                            New York<br />
+                            March &#8212; April 2021<br /><br />
+                            An in-depth exploration of air travel processes. Over-it proposes a solution to the drudgery of layover flights. 
+                        </p>
+                        <div class="view_project">view case study&#10230;</div>
+                    </div>
+                </a>
+            </div>
+
+            <div class="hearts_bones_gallery">
+                <a href="../html/heartsbones.html">
+                    <img src="../images/hearts_bones_gallery.svg" alt="hearts_bones_gallery">
+                    <img src="../mockups/final gallery mocks/heartsbones.png" class="gallery_img">
+                    <div class="hearts_bones_overlay">
+                        <div class="hearts_bones_title">Hearts & Bones Rescue</div>
+                        <p class="hearts_bones_description">
+                            Columbia University<br />
+                            New York<br />
+                            May &#8212; June 2021<br /><br />
+                            A redesign of a local non-profit dog rescue that emphasizes building trust with their donors and volunteers.
+
+                        </p>
+                        <div class="view_project">view case study&#10230;</div>
+                    </div>
+                </a>
+            </div>
+
+            <div class="USDA_gallery">
+                <a href="../html/usda.html">
+                    <img src="../images/usda_gallery.svg" alt="usda_gallery">
+                    <img src="../mockups/final gallery mocks/usda.png" class="gallery_img">
+                    <div class="usda_overlay">
+                        <div class="usda_title">U.S. Dept. of Agriculture</div>
+                        <p class="usda_description">
+                            Columbia University<br />
+                            New York<br />
+                            April &#8212; May 2021<br /><br />
+                            A complete redesign of a prominent government agency with a focus on information architecture.
+                        </p>
+                        <div class="view_project">view case study&#10230;</div>
+                    </div>
+                </a>
+            </div>
+
+
+            <div class="footer">
+                &copy; 2021&emsp;&emsp;built by Demmy Yang
+            </div>
+        </div>
+    </main>
+
     <script src="../main.js"></script>
 </body>
 </html>
