--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
                             A redesign of a local non-profit dog rescue that emphasizes building trust with their donors and volunteers.
 
                         </p>
-                        <div class="view_project">view case study&#10230;</div>
+                        <div class="view_project">view case study Adrian's way&#10230;</div>
                     </div>
                 </a>
             </div>
