sportally gallery heading png change

--- a/html/UXUI.html
+++ b/html/UXUI.html
@@ -34,7 +34,7 @@
 
             <div class="sports_gallery">
                 <a href="../html/sportally.html">
-                    <img src="../images/sporty_gallery.svg" alt="sports_gallery">
+                    <img src="../images/sporty_gallery.png" alt="sports_gallery">
                     <img src="../mockups/final gallery mocks/sportally.png" class="gallery_img">
                     <div class="sports_overlay">
                         <div class="sports_title">SPORTALLY</div>
