--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
             <div class="sports_gallery">
                 <a href="./html/sportally.html">
-                    <img src="./images/sporty_gallery.svg" alt="sports_gallery">
+                    <img src="./images/sporty_gallery.png" alt="sports_gallery" class="gallery_text_png">
                     <img src="./mockups/final gallery mocks/sportally.png" class="gallery_img">
                     <div class="sports_overlay">
                         <div class="sports_title">SPORTALLY</div>
