preload menu pngs from figma

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
             <div class="sports_gallery">
                 <a href="./html/sportally.html">
-                    <img src="./images/sporty_gallery.png" alt="sports_gallery" class="gallery_text_png">
+                    <img src="./images/gallery/sportally_gallery.png" alt="sports_gallery" class="gallery_text_png">
                     <img src="./mockups/final gallery mocks/sportally.png" class="gallery_img">
                     <div class="sports_overlay">
                         <div class="sports_title">SPORTALLY</div>
@@ -50,7 +50,7 @@
 
             <div class="hotel_fullerton_gallery">
                 <a href="./html/hotelfullerton.html">
-                    <img src="./images/hotel_fullerton_gallery.svg" alt="hotel_fullerton_gallery">
+                    <img src="./images/gallery/hotel_fullerton_gallery.png" alt="hotel_fullerton_gallery" class="gallery_text_png">
                     <img src="./mockups/final gallery mocks/hotelfullerton.png" class="gallery_img">
                     <div class="hotelfullerton_overlay">
                         <div class="hotelfullerton_title">The Hotel Fullerton</div>
@@ -67,7 +67,7 @@
 
             <div class="retriever_gallery">
                 <a href="./html/retriever.html">
-                    <img src="./images/retriever_gallery.svg" alt="retriever_gallery">
+                    <img src="./images/gallery/retriever_gallery.png" alt="retriever_gallery" class="gallery_text_png">
                     <img src="./mockups/final gallery mocks/retriever.png" class="gallery_img">
                     <div class="retriever_overlay">
                         <div class="retriever_title">RETRIEVER</div>
@@ -84,7 +84,7 @@
 
             <div class="overit_gallery">
                 <a href="./html/overit.html">
-                    <img src="./images/overit.svg" alt="overit_gallery">
+                    <img src="./images/gallery/over_it_gallery.png" alt="over_it_gallery" class="gallery_text_png">
                     <img src="./mockups/final gallery mocks/overit.png" class="gallery_img">
                     <div class="overit_overlay">
                         <div class="overit_title">Over-it</div>
@@ -101,7 +101,7 @@
 
             <div class="hearts_bones_gallery">
                 <a href="./html/heartsbones.html">
-                    <img src="./images/hearts_bones_gallery.svg" alt="hearts_bones_gallery">
+                    <img src="./images/gallery/hearts_and_bones_gallery.png" alt="hearts_and_bones_gallery" class="gallery_text_png">
                     <img src="./mockups/final gallery mocks/heartsbones.png" class="gallery_img">
                     <div class="hearts_bones_overlay">
                         <div class="hearts_bones_title">Hearts & Bones Rescue</div>
@@ -119,7 +119,7 @@
 
             <div class="USDA_gallery">
                 <a href="./html/usda.html">
-                    <img src="./images/usda_gallery.svg" alt="usda_gallery">
+                    <img src="./images/gallery/usda_gallery.png" alt="usda_gallery" class="gallery_text_png">
                     <img src="./mockups/final gallery mocks/usda.png" class="gallery_img">
                     <div class="usda_overlay">
                         <div class="usda_title">U.S. Dept. of Agriculture</div>
