remove need for UXUI.html through localStorage API usage

--- a/html/sportally.html
+++ b/html/sportally.html
@@ -19,7 +19,7 @@
             <a href="../index.html">Demmy Yang&ensp;|&ensp;UX/UI Designer</a>
         </div>
         <ul class="nav-container">
-            <li><a href="../html/UXUI.html" class="nav-links">Projects</a></li>
+            <li><a href="../index.html" class="nav-links">Projects</a></li>
             <li><a href="../html/about.html" class="nav-links">About</a></li>
             <li><a href="../html/resume.html" class="nav-links">Resume</a></li>
             <li><a href="../html/contact.html" class="nav-links">Contact</a></li>
@@ -33,7 +33,7 @@
     </nav>
     
     <div class="gallery_links">
-        <a href="./UXUI.html">
+        <a href="../index.html">
             &#10229;&ensp;Back to gallery</a>
         <a href="https://www.google.com">Next project&ensp;&#10230;</a> 
     </div>
