--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
 <body>
     <nav>
         <div class="logo">
-            <a href="./index.html">Demmy Yang&ensp;|&ensp;UX/UI Designer</a>
+            <a>Demmy Yang&ensp;|&ensp;UX/UI Designer</a>
         </div>
         <ul class="nav-container">
-            <li><a href="./html/UXUI.html" class="nav-links">Projects</a></li>
+            <li><a class="nav-links">Projects</a></li>
             <li><a href="./html/about.html" class="nav-links">About</a></li>
             <li><a href="./html/resume.html" class="nav-links">Resume</a></li>
             <li><a href="./html/contact.html" class="nav-links">Contact</a></li>
