--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <div class="sports_gallery">
                 <a href="./html/sportally.html">
                     <img src="./images/gallery/sportally_gallery.png" alt="sports_gallery" class="gallery_text_png">
-                    <img src="./mockups/final gallery mocks/sportally.png" class="gallery_img">
+                    <img src="./images/gallery/mocks/sportally.png" class="gallery_img">
                     <div class="sports_overlay">
                         <div class="sports_title">SPORTALLY</div>
                         <p class="sports_description">
@@ -51,7 +51,7 @@
             <div class="hotel_fullerton_gallery">
                 <a href="./html/hotelfullerton.html">
                     <img src="./images/gallery/hotel_fullerton_gallery.png" alt="hotel_fullerton_gallery" class="gallery_text_png">
-                    <img src="./mockups/final gallery mocks/hotelfullerton.png" class="gallery_img">
+                    <img src="./images/gallery/mocks/hotelfullerton.png" class="gallery_img">
                     <div class="hotelfullerton_overlay">
                         <div class="hotelfullerton_title">The Hotel Fullerton</div>
                         <p class="hotelfullerton_description">
@@ -68,7 +68,7 @@
             <div class="retriever_gallery">
                 <a href="./html/retriever.html">
                     <img src="./images/gallery/retriever_gallery.png" alt="retriever_gallery" class="gallery_text_png">
-                    <img src="./mockups/final gallery mocks/retriever.png" class="gallery_img">
+                    <img src="./images/gallery/mocks/retriever.png" class="gallery_img">
                     <div class="retriever_overlay">
                         <div class="retriever_title">RETRIEVER</div>
                         <p class="retriever_description">
@@ -85,7 +85,7 @@
             <div class="overit_gallery">
                 <a href="./html/overit.html">
                     <img src="./images/gallery/over_it_gallery.png" alt="over_it_gallery" class="gallery_text_png">
-                    <img src="./mockups/final gallery mocks/overit.png" class="gallery_img">
+                    <img src="./images/gallery/mocks/overit.png" class="gallery_img">
                     <div class="overit_overlay">
                         <div class="overit_title">Over-it</div>
                         <p class="overit_description">
@@ -102,7 +102,7 @@
             <div class="hearts_bones_gallery">
                 <a href="./html/heartsbones.html">
                     <img src="./images/gallery/hearts_and_bones_gallery.png" alt="hearts_and_bones_gallery" class="gallery_text_png">
-                    <img src="./mockups/final gallery mocks/heartsbones.png" class="gallery_img">
+                    <img src="./images/gallery/mocks/heartsbones.png" class="gallery_img">
                     <div class="hearts_bones_overlay">
                         <div class="hearts_bones_title">Hearts & Bones Rescue</div>
                         <p class="hearts_bones_description">
@@ -120,7 +120,7 @@
             <div class="USDA_gallery">
                 <a href="./html/usda.html">
                     <img src="./images/gallery/usda_gallery.png" alt="usda_gallery" class="gallery_text_png">
-                    <img src="./mockups/final gallery mocks/usda.png" class="gallery_img">
+                    <img src="./images/gallery/mocks/usda.png" class="gallery_img">
                     <div class="usda_overlay">
                         <div class="usda_title">U.S. Dept. of Agriculture</div>
                         <p class="usda_description">
