--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Demmy's UX/UI Portfolio - Projects Gallery</title>
-    <link rel = "stylesheet" href = "./style.css">
+    <link rel = "stylesheet" href = "./css/index.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Work+Sans&display=swap" rel="stylesheet">
@@ -145,6 +145,6 @@
         <img src="./images/preloader.svg" alt="preloading logo">
     </div>
 
-    <script src="./main.js"></script>
+    <script src="./js/index.js"></script>
 </body>
 </html>
