title and breadcrumb changes

--- a/html/sportally.html
+++ b/html/sportally.html
@@ -31,16 +31,26 @@
             <div class="line3"></div>
         </div>
     </nav>
-    
-    <div class="gallery_links">
-        <a href="../index.html">
-            &#10229;&ensp;Back to gallery</a>
-        <a href="https://www.google.com">Next project&ensp;&#10230;</a> 
-    </div>
 
    <div class="grid">
+
+    <div class="project_title_section" style="text-align: center">
+        <div class="project_title">
+            <span style="text-align:center">sportally case study</span>
+        </div>
     
-        <img class ="img_heading" src="../images/case-study-headers/sportally.png">
+        <div class="project_links" style="text-align:center">
+            <a href="https://docs.google.com/presentation/d/10L2x2fI1Jiy3O2VAU7KzuBwW8pWXN8jw-S6i5lwGLks/edit?usp=sharing" target="_blank">view google slides</a> | 
+            <a href="https://www.figma.com/proto/15Y4UVRMwsUjsh5SS9uEex/GRP-PRJ-3-SPORTALLY?page-id=364%3A9580&node-id=364%3A9582&starting-point-node-id=364%3A9582" target="_blank">view figma prototype</a>
+        </div>
+
+        <div class="project_metadata">
+            Columbia University, New York<br />
+            July &#8212; August 2021<br />
+        </div>
+    </div>
+
+    <br />
 
     <!-- Slideshow container -->
         <div class="slideshow-container">
@@ -74,18 +84,7 @@
 
     <br /><a name="project_overview"></a>
 
-        <div class="project_title">
-            <h1 style="text-align:center">sportally case study</h1>
-        </div>
-
-        <div class="project_links" style="text-align:center">
-            <a href="https://docs.google.com/presentation/d/10L2x2fI1Jiy3O2VAU7KzuBwW8pWXN8jw-S6i5lwGLks/edit?usp=sharing" target="_blank">view google slides</a> | 
-            <a href="https://www.figma.com/proto/15Y4UVRMwsUjsh5SS9uEex/GRP-PRJ-3-SPORTALLY?page-id=364%3A9580&node-id=364%3A9582&starting-point-node-id=364%3A9582" target="_blank">view figma prototype</a>
-        </div>
-
         <div class="project_description" style="text-align: center">
-            <b>Columbia University, New York<br />
-            July &#8212; August 2021<br /></b>
             <p class="project_para" style="text-align:left">
                 <b>PROJECT DESCRIPTION:</b> An online platform that connects athletes who want to play sports at any level. Sports App's profile will summarize your sports experience and connect you with other athletes nearby. Through your profile, you will be able to showcase your athletic background, goals, and interests.
                 <br /><br />
