lots of css and js changes

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Demmy's UX/UI Portfolio - Projects Gallery</title>
+    <link rel = "stylesheet" href = "./css/header.css">
     <link rel = "stylesheet" href = "./css/index.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -146,5 +147,6 @@
     </div>
 
     <script src="./js/index.js"></script>
+    <script src="./js/menu.js"></script>
 </body>
 </html>
