--- a/html/sportally.html
+++ b/html/sportally.html
@@ -5,7 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Demmy's UX/UI Portfolio - Sportally</title>
-    <link rel = "stylesheet" href = "../css/sportally.css">
+    <link rel = "stylesheet" href = "../css/project-page.css">
+    <link rel = "stylesheet" href = "../css/header.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Work+Sans&display=swap" rel="stylesheet">
@@ -268,7 +269,7 @@
         </div>
 
 
-    <script src="../main.js"></script>
+    <script src="../js/menu.js"></script>
     <script src="../js/sportally.js"></script>
 </body>
 </html>
