--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
     </main>
 
     <div class="preloader">
-        <img src="./images/preloader.svg" alt="preloading logo">
+        <img src="./images/preloader.png" alt="preloading logo">
     </div>
 
     <script src="./js/index.js"></script>
