--- a/html/retriever.html
+++ b/html/retriever.html
@@ -85,14 +85,26 @@
     
             <div class="project_description" style="text-align: center">
                 <p class="project_para" style="text-align:left">
-                    <b>PROJECT DESCRIPTION:</b> An online platform that connects athletes who want to play sports at any level. Sports App's profile will summarize your sports experience and connect you with other athletes nearby. Through your profile, you will be able to showcase your athletic background, goals, and interests.
+                    <b>PROJECT DESCRIPTION:</b> A study of the problem space surrounding pet owners and their community when their pet is lost.
                     <br /><br />
-                    <b>BACKGROUND:</b> We found a group of athletes who were frustrated that they couldn’t find people to play sports with, which led us to the idea of creating a platform for people to find sports and play together wherever they are.
+                    <b>BACKGROUND:</b> Beloved pets get lost everyday. Our team strives to create a reliable mobile platform to connect and alert nearby users/neighbors when pets go missing, so they can be returned home quickly and safely. We strive to understand what features pet owners need to make them feel more secure and safe if their pet were to get lost.
                     <br /><br />
-                    <b>GOALS:</b> We want to solve the problem of not knowing anyone in the area by providing a platform to get athletes together to play sports, wherever they are.
+                    <b>GOALS:</b> How might we make lost pets easier to find in order to lessen the stress of pet owners.
                     <br /><br />
-                    <b>TOOLS USED:</b> Figma, Miro, Trello, Zoom, Google Forms, Adobe Illustrator, Adobe Photoshop, HTML/CSS, Github <br />
+                    <b>PRIMARY RESEARCH OBJECTIVE:</b> As user researchers, we want to study how pet owners interact with their community when their pet is lost.
+                    <br /><br />
+                    <b>SECONDARY RESEARCH OBJECTIVES:</b><br />
+                    - We want to understand the past experiences of owners searching for their lost pet. What were great stressors and relievers?<br />
+                    - We want to understand the end to end process of losing and finding a lost pet.<br />
+                    - We want to understand what resources (i.e. apps/websites) do pet owners rely on apps/websites when searching for lost pets
+                    
+                    <br /><br />
+                    <b>TOOLS USED:</b> Figma, Miro, Trello, Zoom, Google Forms, Adobe Illustrator, Adobe Photoshop<br />
                 </p>
+
+                <div class="footer">
+                    &copy; 2021&emsp;&emsp;built by Demmy Yang
+                    </div>
 
     <script src="../main.js"></script>
 </body>
