gallery edit for fashion source

--- a/index.html
+++ b/index.html
@@ -50,15 +50,14 @@
             </div>
 
             <div class="hotel_fullerton_gallery">
-                <a href="./html/hotelfullerton.html">
-                    <img src="./images/gallery/hotel_fullerton_gallery.png" alt="hotel_fullerton_gallery" class="gallery_text_png">
-                    <img src="./images/gallery/mocks/hotelfullerton.png" class="gallery_img">
+                <a href="./html/fashionsource.html">
+                    <img src="./images/gallery/fashion_source.png" alt="fashion_source_gallery" class="gallery_text_png">
+                    <img src="./images/gallery/mocks/fashionsource.png" class="gallery_img">
                     <div class="hotelfullerton_overlay">
-                        <div class="hotelfullerton_title">The Hotel Fullerton</div>
+                        <div class="hotelfullerton_title">Fashion Source</div>
                         <p class="hotelfullerton_description">
-                            Orange County,<br />
-                            California<br />
-                            July &#8212; August 2021<br /><br />
+                            New York, NY<br />
+                            September 2021<br /><br />
                             A fresh update for a popular Anaheim hotel next door to Disneyland. Responsive web design created in Webflow. 
                         </p>
                         <div class="view_project">view case study&#10230;</div>
