fashion source case study description update

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                         <p class="hotelfullerton_description">
                             New York, NY<br />
                             September 2021<br /><br />
-                            A fresh update for a popular Anaheim hotel next door to Disneyland. Responsive web design created in Webflow. 
+                            An app that delves into the problem space of sourcing materials and services for fashion production 
                         </p>
                         <div class="view_project">view case study&#10230;</div>
                     </div>
