--- a/html/fashionsource.html
+++ b/html/fashionsource.html
@@ -80,19 +80,16 @@
     
             <div class="project_description" style="text-align: center">
                 <p class="project_para" style="text-align:left">
-                    <b>PROJECT DESCRIPTION:</b> A study of the problem space surrounding pet owners and their community when their pet is lost.
+                    <b>PROJECT DESCRIPTION:</b> An app that delves into the problem space of sourcing materials and services for fashion production
                     <br /><br />
-                    <b>BACKGROUND:</b> Beloved pets get lost everyday. Our team strives to create a reliable mobile platform to connect and alert nearby users/neighbors when pets go missing, so they can be returned home quickly and safely. We strive to understand what features pet owners need to make them feel more secure and safe if their pet were to get lost.
+                    <b>BACKGROUND:</b> The New York City garment district spans just a few blocks but is home to hundreds if not thousands of businesses. Even with so many options, many find it difficult to break into and filter out the right partners and sources for fabrics and materials. 
                     <br /><br />
-                    <b>GOALS:</b> How might we make lost pets easier to find in order to lessen the stress of pet owners.
-                    <br /><br />
-                    <b>PRIMARY RESEARCH OBJECTIVE:</b> As user researchers, we want to study how pet owners interact with their community when their pet is lost.
-                    <br /><br />
-                    <b>SECONDARY RESEARCH OBJECTIVES:</b><br />
-                    - We want to understand the past experiences of owners searching for their lost pet. What were great stressors and relievers?<br />
-                    - We want to understand the end to end process of losing and finding a lost pet.<br />
-                    - We want to understand what resources (i.e. apps/websites) do pet owners rely on apps/websites when searching for lost pets
-                    
+                    <b>GOALS:</b>  A finished front-end of a mobile app
+                    platform app for both customers & businesses(factories and material stores) 
+                    presentable to the investors:<br />
+                    - to understand how the platform app works <br />
+                    - for customers who need sourcing info and access to service & material providers<br />
+                    - and for businesses who want to register their businesses and reach out to more clients & customers
                     <br /><br />
                     <b>TOOLS USED:</b> Figma, Miro, Trello, Zoom, Google Forms, Adobe Illustrator, Adobe Photoshop<br />
                 </p>
