fs description update

--- a/html/fashionsource.html
+++ b/html/fashionsource.html
@@ -85,7 +85,7 @@
     
             <div class="project_description" style="text-align: center">
                 <p class="project_para" style="text-align:left">
-                    <b>PROJECT DESCRIPTION:</b> An app that delves into the problem space of sourcing materials and services for fashion production
+                    <b>PROJECT DESCRIPTION:</b> A fashion production app that delves into the problem space of sourcing materials and services
                     <br /><br />
                     <b>BACKGROUND:</b> The New York City garment district spans just a few blocks but is home to hundreds if not thousands of businesses. Even with so many options, many find it difficult to break into and filter out the right partners and sources for fabrics and materials. 
                     <br /><br />
