--- a/index.html
+++ b/index.html
@@ -58,9 +58,9 @@
                         <p class="hotelfullerton_description">
                             New York, NY<br />
                             September 2021<br /><br />
-                            An app that delves into the problem space of sourcing materials and services for fashion production 
+                            A fashion production app that delves into the problem space of sourcing materials and services 
                         </p>
-                        <div class="view_project">view case study&#10230;</div>
+                        <div class="view_project">view project&#10230;</div>
                     </div>
                 </a>
             </div>
