all case study project pages created

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
             </div>
 
             <div class="hearts_bones_gallery">
-                <a href="./html/heartsbones.html">
+                <a href="./html/heartandbones.html">
                     <img src="./images/gallery/hearts_and_bones_gallery.png" alt="hearts_and_bones_gallery" class="gallery_text_png">
                     <img src="./images/gallery/mocks/heartsbones.png" class="gallery_img">
                     <div class="hearts_bones_overlay">
