about pfp update

--- a/html/about.html
+++ b/html/about.html
@@ -7,6 +7,7 @@
     <title>Demmy's UX/UI Portfolio - Sportally</title>
     <link rel = "stylesheet" href = "../css/header.css">
     <link rel = "stylesheet" href = "../css/project-page.css">
+    <link rel = "stylesheet" href = "../css/pfp.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Work+Sans&display=swap" rel="stylesheet">
@@ -41,9 +42,12 @@
         </div>
     
         <div class="project_links" style="text-align:center">
-            <a href="https://www.linkedin.com/in/demmy-yang/" target="_blank">view linkedin</a> | 
-            <a href="https://dribbble.com/day6293" target="_blank">view dribbble</a>
+            <a href="https://www.linkedin.com/in/demmy-yang/" target="_blank">linkedin </a> | 
+            <a href="https://dribbble.com/day6293" target="_blank"> dribbble </a> | 
+            <a href="https://drive.google.com/file/d/1gf6k8O4OSnHryCv4TnS5bn0OonnzB0g8/view?usp=sharing" target="_blank"> resume PDF</a>
         </div>
+        <br /><br />
+        <img class="pfp" src="../images/about_pic.png"><br />
 
         <div class="project_description" style="text-align: center">
             <p class="project_para" style="text-align:left">
