--- a/html/about.html
+++ b/html/about.html
@@ -44,7 +44,7 @@
         <div class="project_links" style="text-align:center">
             <a href="https://www.linkedin.com/in/demmy-yang/" target="_blank">linkedin </a> | 
             <a href="https://dribbble.com/day6293" target="_blank"> dribbble </a> | 
-            <a href="https://drive.google.com/file/d/1gf6k8O4OSnHryCv4TnS5bn0OonnzB0g8/view?usp=sharing" target="_blank"> resume PDF</a>
+            <a href="https://docs.google.com/document/d/1OWtTW3x9lptzmR33txO-wEhXSODOpUSJIukZYcIN-Xw/edit?usp=sharing" target="_blank"> resume PDF</a>
         </div>
         <br /><br />
         <img class="pfp" src="../images/about_pic.png"><br />
